# gdpr-logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
benchmarks/: BenchmarkUtils.cpp  BenchmarkUtils.hpp  batch_size_benchmark.cpp  concurrency_benchmark.cpp  encryption_usage_benchmark.cpp  file_rotation_benchmark.cpp  filepath_diversity_benchmark.cpp  main_benchmark.cpp  queue_capacity_benchmark.cpp
benchmarks/validation/: batch_size.cpp  concurrency.cpp  encryption_compression_usage.cpp  encryption_usage.cpp  file_rotation.cpp  queue_capacity.cpp  scaling_concurrency.cpp
benchmarks/workloads/: burst.cpp  compression_ratio.cpp  diverse_filepaths.cpp  gdpruler.cpp  gdpruler_compression_rate.cpp  gdpruler_log_performance.cpp  large_batches.cpp  main.cpp  multi_producer_small_batches.cpp  single_entry_appends.cpp
cmake/: benchmarks.cmake  dependencies.cmake  examples.cmake  executable.cmake  library.cmake  project_settings.cmake  testing.cmake
examples/: main.cpp
include/: Buffer.hpp  BufferQueue.hpp  Compression.hpp  Config.hpp  Crypto.hpp  LockFreeBuffer.hpp  LockFreeQueue.hpp  LogEntry.hpp  LogExporter.hpp  Logger.hpp  LoggingAPI.hpp  LoggingManager.hpp  LoggingSystem.hpp  QueueItem.hpp  Segment.hpp  SegmentedStorage.hpp  ThreadSafeQueue.hpp  TrustedCounter.hpp  Writer.hpp
plot_scripts/: README.md  gdpruler_benchmark_plot.py
src/: Buffer.cpp  BufferQueue.cpp  Compression.cpp  Config.cpp  Crypto.cpp  LockFreeBuffer.cpp  LockFreeQueue.cpp  LogEntry.cpp  LogExporter.cpp  Logger.cpp  LoggingAPI.cpp  LoggingManager.cpp  LoggingSystem.cpp  Segment.cpp  SegmentedStorage.cpp  TrustedCounter.cpp  Writer.cpp  main.cpp
tests/integration/: test_CompressionCrypto.cpp  test_WriterBuffer.cpp  test_WriterQueue.cpp
tests/performance/: test_LockFreeBuffer_Performance.cpp  test_LockFreeQueue_Performance.cpp
tests/unit/: test_BufferQueue.cpp  test_Compression.cpp  test_Crypto.cpp  test_LockFreeBuffer.cpp  test_LockFreeQueue.cpp  test_LogEntry.cpp  test_LogExporter.cpp  test_Logger.cpp  test_LoggingAPI.cpp  test_SegmentedStorage.cpp  test_TrustedCounter.cpp  test_Writer.cpp
thesis/: main.tex
thesis/chapters/: 01_introduction.tex  02_background.tex  03_overview.tex  04_design.tex  05_implementation.tex  06_evaluation.tex  07_related-work.tex  08_summary-conclusion.tex  09_future-work.tex
thesis/pages/: title.tex
